# LethalModInstaller-rs

./: Cargo.toml  README.md  modlist.toml
src/: main.rs
src/controls/: config_control.rs  install_control.rs  mod.rs  repair_control.rs  uninstall_control.rs
src/controls/ConfigControl/: configuration.rs  mod.rs  mod_info.rs  remote_mod_list.rs
src/controls/config_control/: mod.rs
src/forms/: UserFunctionForm.rs  mod.rs
src/functions/: install.rs  mod.rs  structs.rs
src/models/: mod.rs  mod_info.rs
src/utils/: mod.rs
